objects/et4ae5__SendDefinition__c.object
<CustomObject>
    <description>Holds send-specific information.</description>
    <fields>
        <fullName>et4ae5__ABTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Test Lookup</label>
        <referenceTo>et4ae5__abTest__c</referenceTo>
        <relationshipLabel>Email Sends</relationshipLabel>
        <relationshipName>Email_Sends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__AB_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AB Test</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__AllSources__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AllSources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__BackupWorkflow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Backup Workflow Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Bounce_Rate_del__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__NumberSent__c ) ), et4ae5__NumberSent__c != 0 ), et4ae5__Number_Bounced__c / et4ae5__NumberSent__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of bounces versus the emails that were sent</inlineHelpText>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>et4ae5__Business_Unit__c.et4ae5__Enabled__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>et4ae5__Business_Unit__c</referenceTo>
        <relationshipLabel>Email Sends</relationshipLabel>
        <relationshipName>Send_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_saved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit saved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Send Definitions</relationshipLabel>
        <relationshipName>SendDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Campaigns__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaigns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Click_Through_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberofUniqueClicks__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of unique clicks versus the emails that were sent (excluding bounces)</inlineHelpText>
        <label>Click Through Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Sends</relationshipLabel>
        <relationshipName>SendDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__ConversationId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Conversation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ConversationId_old__c</fullName>
        <formula>$Organization.Id+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversation ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DataExtensionId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DataExtensionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateSent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date and time the send was actually sent by Marketing Cloud.</inlineHelpText>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Date_Sent_Calculated__c</fullName>
        <formula>IF( ISNULL(et4ae5__DateSent__c) , IF( ISNULL( et4ae5__Scheduled_Date_Time__c ) , et4ae5__Created_Date_Time__c , et4ae5__Scheduled_Date_Time__c ) , et4ae5__DateSent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DedupeSubscribers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dedupe Subscribers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Deliverability_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__NumberSent__c ) ), et4ae5__NumberSent__c != 0 ), et4ae5__Number_Delivered__c / et4ae5__NumberSent__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of emails that were successfully delivered versus the emails that bounced</inlineHelpText>
        <label>Deliverability Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__ETSendDef__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>sendDef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EmailAssetId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Asset Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EmailId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EmailName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExclusionCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExclusionCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Email Sends Where Excluded</relationshipLabel>
        <relationshipName>Send_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExclusionLists__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusion Lists</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Exclusion_Campaigns__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusion Campaigns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Exclusion_Reports__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusion Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasBeenQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasBeenQueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasEnteredRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This job was retried at some point in the process. A job will be mainly retried due to connectivity issues.</inlineHelpText>
        <label>Retried</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Individual_Tracking_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Tracking Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__InitiatedDate__c</fullName>
        <formula>If( ISBLANK( et4ae5__Scheduled_Date_Time__c ), text(MONTH( datevalue(et4ae5__Created_Date_Time__c )) ) &amp; &quot;/&quot; &amp; text(DAY(datevalue(et4ae5__Created_Date_Time__c )) )&amp;
      &quot;/&quot; &amp; text(YEAR(datevalue(et4ae5__Created_Date_Time__c ))), text(MONTH( datevalue(et4ae5__Scheduled_Date_Time__c ))) &amp; &quot;/&quot; &amp; text(DAY(datevalue(et4ae5__Scheduled_Date_Time__c
      ))) &amp; &quot;/&quot; &amp; text(YEAR(datevalue(et4ae5__Scheduled_Date_Time__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InitiatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__JobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JobId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__JobStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JobStarted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__JobStatus__c</fullName>
        <label>JobStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Email Sends</relationshipLabel>
        <relationshipName>SendDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__MemberID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MemberID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Messages__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__NotificationRecipients__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NotificationRecipients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Notify_Owner_On_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Owner On Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberNotClicked__c</fullName>
        <formula>et4ae5__Number_Delivered__c - et4ae5__NumberofUniqueClicks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of subscribers who did not perform any action on the email (i.e.: did not click on any link)</inlineHelpText>
        <label>Number Not Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberSent__c</fullName>
        <inlineHelpText>The number of email messages sent. This value is the number of subscribers that were targeted for this send, minus any excluded subscribers.</inlineHelpText>
        <label>Number Sent</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberUnsubscribed__c</fullName>
        <inlineHelpText>The number of subscribers who unsubscribed from the send</inlineHelpText>
        <label>Number Unsubscribed</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Bounced__c</fullName>
        <formula>et4ae5__NumberofHardBounces__c + et4ae5__NumberofSoftBounces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of email messages that bounced regardless of whether it was a soft or hard bounce</inlineHelpText>
        <label>Number Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Delivered__c</fullName>
        <formula>et4ae5__NumberSent__c - et4ae5__Number_Bounced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of email messages that did not bounce</inlineHelpText>
        <label>Number Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Not_Opened__c</fullName>
        <formula>et4ae5__Number_Delivered__c - et4ae5__NumberofUniqueOpens__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of subscribers who did not open the email</inlineHelpText>
        <label>Number Not Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofExistingUndeliverables__c</fullName>
        <inlineHelpText>The number of subscribers to whom the message could not be delivered</inlineHelpText>
        <label>Number of Existing Undeliverables</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofExistingUnsubscribes__c</fullName>
        <inlineHelpText>The number of subscribers who are unsubscribed in Marketing Cloud prior to the time the email was sent</inlineHelpText>
        <label>Number of Existing Unsubscribes</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofHardBounces__c</fullName>
        <inlineHelpText>The number of email messages that were not delivered due to permanent errors</inlineHelpText>
        <label>Number of Hard Bounces</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofSoftBounces__c</fullName>
        <inlineHelpText>The number of email messages that were not delivered due to non-permanent errors</inlineHelpText>
        <label>Number of Soft Bounces</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofSubscribersForwardingEmail__c</fullName>
        <inlineHelpText>The total number of subscribers who clicked on the Forward link</inlineHelpText>
        <label>Number of Subscribers Forwarding</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofTotalClicks__c</fullName>
        <inlineHelpText>The number of actions taken on an email (i.e.: by clicking on any link). This value includes multiple actions by the same subscriber</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofTotalOpens__c</fullName>
        <inlineHelpText>The number of times the message was opened. This value includes multiple opens by the same subscriber.</inlineHelpText>
        <label>Number of Total Opens</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofUniqueClicks__c</fullName>
        <inlineHelpText>The number of subscribers who performed an action on the email (i.e.: by clicking on any link)</inlineHelpText>
        <label>Number of Unique Clicks</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofUniqueOpens__c</fullName>
        <inlineHelpText>The number of unique email messages that were opened. This value includes only one open per subscriber.</inlineHelpText>
        <label>Number of Unique Opens</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Open_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberofUniqueOpens__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of emails that were opened versus the emails that were sent (excluding bounces)</inlineHelpText>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__RecipientsOptedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required as a compliance precaution to check that the send requestor has ensured all recipients are indeed opted into receiving emails.</description>
        <label>Recipients Opted In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Reply_to__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reply-to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ReportId__c</fullName>
        <description>SF Id of the report used to provide supplemental information for the send.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ReportName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Reports__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Scheduled_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendAutomation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Automation Lookup</label>
        <referenceTo>et4ae5__Automated_Send__c</referenceTo>
        <relationshipLabel>Email Sends</relationshipLabel>
        <relationshipName>EmailSends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendClassificationId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Classification Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendStatus__c</fullName>
        <label>Send Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Pending Tracking Subscription</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processing Data</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Send Queued</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Unscheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__SendTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Automation_disp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Automation</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Status_View__c</fullName>
        <formula>IF( ISPICKVAL( et4ae5__SendStatus__c , &quot;Scheduled&quot;) &amp;&amp; et4ae5__Scheduled_Date_Time__c &lt;= NOW() , $Label.et4ae5__queuedFP , IF( ISPICKVAL(et4ae5__SendStatus__c , &quot;Pending Tracking Subscription&quot; ) , $Label.et4ae5__completed , TEXT( et4ae5__SendStatus__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This status can differ from the email status in Marketing Cloud.</inlineHelpText>
        <label>Send Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SenderProfileId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SenderProfileId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Split_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Status_Date_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubjectBlob__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SubjectBlob</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubjectLine__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The string of text used to appear in the email&apos;s subject line. Note: This text contains backslashes (\) before all single quotes (&apos;) to ensure a secure experience. However, these backslashes do not appear in the email sent.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubscriberListId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber List Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubscriberListName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SyncComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SyncId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SyncId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Thumbnail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Thumbnail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__TimeSinceRequest__c</fullName>
        <formula>IF(isblank( et4ae5__TrackingLastRequested__c), 31, (NOW() - et4ae5__TrackingLastRequested__c)*24*60 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSinceRequest</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__TrackingLastRequested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TrackingLastRequested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__TrackingOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TrackingOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Tracking_As_Of__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date and time the last tracking update was received</inlineHelpText>
        <label>Tracking As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Tracking_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>et4ae5__Transactional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transactional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggerDelayedSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TriggerDelayedSend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__UEBU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Enabled Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>et4ae5__UEBU__c.CreatedById</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>et4ae5__UEBU__c</referenceTo>
        <relationshipLabel>Email Sends</relationshipLabel>
        <relationshipName>Send_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Unsubscribe_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberUnsubscribed__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of subscribers who unsubscribed versus the emails that were sent (excluding bounces)</inlineHelpText>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__abJobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AB Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__fBusiness_Unit__c</fullName>
        <formula>IF(isblank(et4ae5__Business_Unit__r.Name), et4ae5__Business_Unit_saved__c ,et4ae5__Business_Unit__r.Name &amp; &quot; (&quot; &amp; et4ae5__Business_Unit__r.et4ae5__Business_Unit_ID__c &amp; &quot;)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <label>Email Send</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <columns>NAME</columns>
        <columns>et4ae5__EmailName__c</columns>
        <columns>et4ae5__fBusiness_Unit__c</columns>
        <columns>et4ae5__Created_Date_Time__c</columns>
        <columns>et4ae5__Send_Status_View__c</columns>
        <columns>et4ae5__Status_Date_Time__c</columns>
        <columns>et4ae5__FromName__c</columns>
        <columns>et4ae5__FromEmail__c</columns>
        <columns>et4ae5__Campaigns__c</columns>
        <columns>et4ae5__Reports__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>et4ae5__All2</fullName>
        <columns>et4ae5__EmailName__c</columns>
        <columns>et4ae5__Created_Date_Time__c</columns>
        <columns>et4ae5__fBusiness_Unit__c</columns>
        <columns>et4ae5__Send_Status_View__c</columns>
        <columns>et4ae5__Status_Date_Time__c</columns>
        <columns>et4ae5__FromName__c</columns>
        <columns>et4ae5__FromEmail__c</columns>
        <columns>et4ae5__Campaigns__c</columns>
        <columns>et4ae5__Reports__c</columns>
        <filterScope>Everything</filterScope>
        <label>All2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Email Send Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Sends</pluralLabel>
    <recordTypes>
        <fullName>et4ae5__Queued_Send_Definition</fullName>
        <active>true</active>
        <label>Queued Send Definition</label>
    </recordTypes>
    <recordTypes>
        <fullName>et4ae5__Send_Definition</fullName>
        <active>true</active>
        <label>Send Definition</label>
    </recordTypes>
    <recordTypes>
        <fullName>et4ae5__Trackable_Send_Definition</fullName>
        <active>true</active>
        <label>Trackable Send Definition</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>